--- a/GoogleoAuthdemo1/src/main/resources/application.properties
+++ b/GoogleoAuthdemo1/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:h2:file:./db2
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.username=
 spring.datasource.password=
 
 #Oauth2 configure
